# Graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/billboard/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/depth/: vertex.glsl
shaders/fireworks/: geometry.glsl  vertex.glsl
shaders/normal/: fragment.glsl  vertex.glsl
shaders/object/: fragment.glsl  vertex.glsl
shaders/particles/fireworks/render/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/particles/fireworks/update/: geometry.glsl
shaders/particles/flame/render/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/particles/flame/update/: geometry.glsl  vertex.glsl
shaders/particles/fountain/render/: fragment.glsl  geometry.glsl
shaders/particles/fountain/update/: geometry.glsl  vertex.glsl
shaders/screen/: fragment.glsl  vertex.glsl
shaders/skybox/: fragment.glsl  vertex.glsl
src/: main.cpp  scene.hpp
src/common/: defs.hpp  structs.hpp  transformation.hpp  utils.hpp
src/framework/: billboard.hpp  camera.hpp  depth_buffer.hpp  frame_buffer.hpp  game_object.hpp  particle_system.hpp  shader.hpp  texture.hpp  texture_random.hpp
src/framework/fractal_system/: fractal_tree.hpp  grammar.hpp
src/framework/model/: mesh.hpp  model.hpp
src/framework/particle_system/: base.hpp
src/framework/ray_tracing/: hittable.hpp  hittable_list.hpp  tracer.hpp
src/framework/sprites/: base.hpp  cube.hpp  floor.hpp  mesh.hpp  sphere.hpp  square.hpp
src/framework/textures/: texture_2d.hpp  texture_base.hpp  texture_cube.hpp
src/scene/: cursor.hpp  gui.hpp  render.hpp  resources.hpp  scene.hpp  status.hpp
(+10 files in other folders)
